# pdf-lock-and-compress

./: .gitignore  README.md  constants.py  main.py  make_py_files_dragndropably_LINUX.sh  make_py_files_dragndropably_WINDOWS.reg  pdf_compress.desktop  pdf_compress.py  pdf_compress_n_protect.desktop  pdf_compress_n_protect.py  pdf_test_compression_levels.desktop  pdf_test_compression_levels.py  pyproject.toml
.github/: FUNDING.yml
functions/: compress_pdf.py  get_password.py  protect_pdf.py
tests/: Sample.odg  test_compress.py  test_constants.py  test_protect.py
