[project]
name = "pdf-lock-and-compress"
version = "0.1.0"
description = "Drag-and-drop PDF compression and password protection scripts using Ghostscript and pypdf"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = [
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pypdf>=4.0.0",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
